2002-05-30  wakaba <w@suika.fam.cx>

	* Charset.pm:
	- (%ENCODER, %DECODER, %N11NTABLE): Removed.
	- (%CHARSET): New hash.
	- (make_charset): New function.
	* Encoding.pm:
	- (decide_coderange): Checks media-type.
	- (uuencode): Typo fix.

2002-05-29  wakaba <w@suika.fam.cx>

	* MediaType.pm, Encoding.pm: New modules.

2002-05-25  wakaba <w@suika.fam.cx>

	* Makefile: New file.
	* EncodedWord.pm: 
	- Procedes trailing WSP correctly.
	- Don't fail with unknown error.

2002-03-25  wakaba <w@suika.fam.cx>

	* Charset.pm, EncodedWord.pm: New modules.
	* ChangeLog: New file.